awc.css
* {
    font-family: Courier New;
/*     font-size: 1em; */
}

body, h1 {
    margin: unset;
}

.grid {
    display: grid;
}

#main-grid {
    height: 100vh;
    width: 100vw;
}

.item {
    background-color: lightblue;
    text-align: center;
}

.heading {
    height: 100%;
}

.heading h1 {
    font-weight: 200;
    position: relative;
    top: 33.433%;
    height: 33.333%;
    font-size: 10.5vh;
    cursor: pointer;
    width: 50%;
    margin: 0 auto;
    -webkit-transition: color 0.2s, letter-spacing 0.55s; /* Safari */
    transition: color 0.2s, letter-spacing 0.55s;
/*     bottom: 33%; */
}



#item1 {
    background-color: lightblue;
/*     height: 80vh; */
}

#item1 .heading h1:hover {
/*     background-color: #AFD8ED; */
    color: antiquewhite;
    letter-spacing: 0.15em;
}

#item2 {
    background-color: antiquewhite;
}

#item2 .heading h1:hover {
/*     background-color: #AFD8ED; */
    color: lightblue;
    letter-spacing: 0.15em;
}
#item3 {
    background-color: aliceblue
}

#item3 .heading h1:hover {
    color: lightblue;
    letter-spacing: 0.15em;
}


//----------------for jquery slide


#item1 {
    background-color: lightblue;
/*     height: 80vh; */
}

#item1 .heading h1:hover {
/*     background-color: #AFD8ED; */
    color: antiquewhite;
    letter-spacing: 0.15em;
}

#item2 {
    background-color: antiquewhite;
}

#item2 .heading h1:hover {
/*     background-color: #AFD8ED; */
    color: lightblue;
    letter-spacing: 0.15em;
}
#item3 {
    background-color: aliceblue
}

#item3 .heading h1:hover {
    color: lightblue;
    letter-spacing: 0.15em;
}



/* //------------------ */
.nav-slide { /* focal item heigh */
/*     background-color: lightblue; */
    height: 80vh;
}

.nav-slide-h1 { /* gneral h1 height */
   top: 5% !important;
/*    // height: 10vh; */
}

.nav-slide-item-h1  { /* focal h1 height */
   top: 1% !important;;
   height: 15% !important;
      border-bottom: 1px solid lightblue ;
}

